# macro_examples

./: Cargo.toml
attribute/: Cargo.toml
attribute/src/: lib.rs
declarative/: Cargo.toml
declarative/src/: lib.rs
demo_main/: Cargo.toml
demo_main/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
function_like/: Cargo.toml
function_like/src/: lib.rs
