[package]
name = "demo_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
declarative_macros = {path="../declarative"}
function_like_macros = {path="../function_like"}
attribute_macros = {path="../attribute"}
derive_macros = {path = "../derive"}